RESOLVED FIXED269812
MacCatalyst engineering build is broken on ToT for various reasons
https://bugs.webkit.org/show_bug.cgi?id=269812
Summary MacCatalyst engineering build is broken on ToT for various reasons
Abrar Rahman Protyasha
Reported 2024-02-20 13:50:58 PST
The build is broken for an assortment of reasons: - 274017@main calls `SecTrust` API that is not available in the macCatalyst SDK. - 273350@main refers to the `m_fullscreenManager` variable without wrapping it around `ENABLE(FULLSCREEN_API)`. This only causes a build failure in Debug configuration. - macCatalyst is not a target for libTestWTFAlwaysMissing-iOS.tbd, so the linker fails for `Ld TestWTF`.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-20 13:51:08 PST
Radar WebKit Bug Importer
Comment 2 2024-02-20 13:52:07 PST
Abrar Rahman Protyasha
Comment 3 2024-02-20 14:36:14 PST
EWS
Comment 4 2024-02-20 22:11:11 PST
Committed 275086@main (65d5c80e4e18): <https://commits.webkit.org/275086@main> Reviewed commits have been landed. Closing PR #24843 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.