MacCatalyst engineering build is broken on ToT for various reasons https://bugs.webkit.org/show_bug.cgi?id=269812 rdar://123333483

Reviewed by Alexey Proskuryakov and Wenson Hsieh.

This patch makes an assortment of build fixes for the MacCatalyst
engineering build, namely:

- In IPCSerialization API tests, make sure to not call SecTrust API that
  is unavailable in the MacCatalyst SDK.
- In the WebCore::Document constructor, call ASSERT(!m_fullscreenManager)
  only when the Fullscreen API is enabled.
- Add MacCatalyst to the target set in libTestWTFAlwaysMissing-iOS.tbd,
  otherwise TestWTF linking fails.

* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/dom/Document.cpp:
(WebCore::m_frameIdentifier):
* Tools/TestWebKitAPI/Tests/IPC/IPCSerialization.mm:
(secTrustRefsEqual):
* Tools/TestWebKitAPI/Tests/WTF/darwin/libTestWTFAlwaysMissing-iOS.tbd:

Canonical link: https://commits.webkit.org/275086@main